--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,11 @@
         "activeTab",
         "storage",
         "tabs"
-    ]
+    ],
+    "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
