--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,13 @@
     "permissions": [
         "activeTab",
         "storage",
-        "tabs"
+        "tabs",
+        "scripting"
     ],
     "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ]
+        {
+            "matches": ["<all_urls>"],
+            "js": ["tracker.js"]
+        }
+    ]
 }
