Made it so when you click the extension the settings page opens up

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
     "description": "This site blocker allows you to group multiple sites together ",
     "author": "Cooper Dalton",
     "action": {
-        "default_title": "Site Blocker",
-        "default_popup": "popup.html"
+        "default_title": "Site Blocker"
     },
     "permissions": [
         "activeTab",
@@ -19,5 +18,8 @@
             "matches": ["<all_urls>"],
             "js": ["tracker.js"]
         }
-    ]
+    ],
+    "background": {
+    "service_worker": "background.js"
+  }
 }
